marcos/tests/ui/fail_tuple_struct.stderr
error: ParseAttributes only supports structs with named fields
 --> tests/ui/fail_tuple_struct.rs:5:8
  |
5 | struct TupleStruct(Option<String>);
  |        ^^^^^^^^^^^
