marcos/tests/ui/fail_tuple_struct.rs
use marcos::ParseAttributes;

#[derive(ParseAttributes)]
#[attr_path(thing)]
struct TupleStruct(Option<String>);

fn main() {}
